add repo ref on about page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -11,6 +11,6 @@
 
 <p>This site is a project created and maintained by Matthew Tessler, a student at New York University majoring in Computer Science. Find his portfolio website <a href="http://matthewtessler.com">here</a>.</p>
 
-<p>Code for this website will soon be made publicly available on Github.</p>
+<p>Code available on <a href="https://github.com/matthewtessler/bike-nyc" target="_blank">GitHub</a>.</p>
 
 <p>This is Matthew Tessler's final project for Professor Joe Versoza's Applied Internet Technology course. Check out his page <a href="http://cs.nyu.edu/~jversoza/">here</a>.</p>
