updating about page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,7 +2,7 @@
 
 <h4 class="blue-grey-text text-darken-3">Usage</h4>
 
-<p>Click a pushpin to reveal the location's name and capacity. Create an account to save your favorite locations. You can save and delete as many locations as you'd like, and they will be displayed with the Citi Bike pushpin on the homepage and on the My Locations page.</p>
+<p>Click a pushpin to reveal the location's name and capacity. Create an account to save your favorite locations. Save and delete as many locations as you'd like, and they will be displayed with the Citi Bike pushpin on the homepage and on the My Locations page.</p>
 
 <p>If you'd like to find out more about Citi Bike, click <a href="https://www.citibikenyc.com">here</a>.</p>
 <p>This project and Matthew Tessler have no affiliation with Citi Bike.</p>
