--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -51,11 +51,20 @@
            <li id="register"><a href="/register">Register</a></li>
            <li id="about"><a href="/about">About</a></li>
           {{/if}}
-    
+
         </ul>
           <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
        <script>
        $(".button-collapse").sideNav();
+       </script>
+       <script type="text/javascript">
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-24535666-4', 'auto');
+          ga('send', 'pageview');
        </script>
       </div>
     </nav>
