add meta description

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Bike NYC</title>
+    <meta name="description" content="Find and save stations with Citi Bike."/>
     <!--Import Google Icon Font-->
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
